--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <button (click)="submit('en')">English</button>
-<button (click)="submit('ge')">German</button>
+<button (click)="submit('ge')">tamil</button>
 
 <p>{{ 'welcomeMessage' | translate:user}}</p>
 
