--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <button (click)="submit('en')">English</button>
-<button (click)="submit('ge')">ger</button>
+<button (click)="submit('ge')">ndndsd</button>
 
 <p>{{ 'welcomeMessage' | translate:user}}</p>
 
