--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,5 @@
 <p>{{ 'welcomeMessage' | translate:user}}</p>
 
 <input type="password" placeholder="{{ 'login.password' | translate }}">
+<app-addcustomer></app-addcustomer>
+<app-customerlist></app-customerlist>
